covered small errors, added filter by issue status and aborted mysql config transfer

--- a/swiftlib/swiftlib/static/assets/style.css
+++ b/swiftlib/swiftlib/static/assets/style.css
@@ -438,3 +438,7 @@ text-color:white;
 .tooltip-icon{
     padding: 9px;
 }
+
+.filter_label{
+    padding: 9px;
+    }
